70114ee3-7c51-40a6-af98-bd2ca53150ad/17cd568b-1349-4670-a8ae-53d47334febc/d38af4a3-c236-487d-94da-f80b6944c2be/kubernates/solr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solr-service-eee4820e-6eb8-451f-9e5e-21f9ac46bede
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
  labels:
    app: solr-eee4820e-6eb8-451f-9e5e-21f9ac46bede
spec:
  selector:
    app: solr-eee4820e-6eb8-451f-9e5e-21f9ac46bede
  ports:
    - port: 80
      targetPort: 8983
      protocol: TCP
  type: ClusterIP
