70114ee3-7c51-40a6-af98-bd2ca53150ad/17cd568b-1349-4670-a8ae-53d47334febc/d38af4a3-c236-487d-94da-f80b6944c2be/kubernates/solr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solr-ingress-eee4820e-6eb8-451f-9e5e-21f9ac46bede
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
  labels:
    app: solr-eee4820e-6eb8-451f-9e5e-21f9ac46bede
spec:
  ingressClassName: nginx
  rules:
    - host: imported-wz5a7i.uwrywk.us-east-2.febe.kbs
      http:
        paths:
          - path: /solr/
            pathType: Prefix
            backend:
              service:
                name: solr-service-eee4820e-6eb8-451f-9e5e-21f9ac46bede
                port:
                  number: 80
